# Repos

./: .gitignore  Enviroment_Setup.bat  GitPortable_Setup.bat  PASSIVE_SCRIPTS.code-workspace  README.md  README_MIGRATION.md  requirements.txt  setup_migration.bat
Project-Kylo/: .gitignore  COMMAND_REFERENCE.md  Dockerfile.kafka-consumer  FRESH_RIG.md  MAINTENANCE.md  Project-Kylo.code-workspace  README.md  START_SERVICES_COMMANDS.md  docker-compose.kafka-consumer.override.example.yml  docker-compose.kafka-consumer.override.yml  docker-compose.kafka-consumer.yml  docker-compose.kafka.yml  docker-compose.yml  pg_hba_fixed.conf  pyproject.toml  pytest.ini  redpanda.yaml  requirements-kafka.txt  requirements.txt  restart_all_services.ps1  setup_db.py  start_all_services.ps1  start_all_services_with_logs.ps1  start_with_logs_simple.ps1
Project-Kylo/.cursor/: AGENT_RULES.md  AGENT_RULES_KYLO.md  AGENT_RULES_REMODEL.md
Project-Kylo/config/: __init__.py  companies.example.json  companies.json  csv_processor_config.json  dsn_map.json  dsn_map_local.json  global.yaml  kylo.config.yaml  schema.py
Project-Kylo/db/: README.md  apply.ps1
Project-Kylo/docs/: CSV_INTAKE.md  DRY_RUN_CHECKLIST.md  EXECUTIVE_SUMMARY.md  IMPORTER.md  INCREMENTAL_POSTING.md  KAFKA_EVENT_BUS_RUNBOOK.md  KAFKA_EVENT_BUS_RUNBOOK_WINDOWS.md  Kylo Remodel – DDL Cheat Sheet.sql  POST_DEPLOYMENT_VALIDATION_CHECKLIST.md  README.md  SNAPSHOT_TOOL_SPEC.md  TECHNICAL_APPENDIX.md  TELEMETRY_WORKFLOW.md  WORKFLOW_VERIFICATION_GUIDE.md  WORKSHEET_ARCHITECTURE.md  WORKSHEET_QUICK_REFERENCE.md  runbook_triage.md  (+2 more)
(+811 files in other folders)
